--- a/contacte.html
+++ b/contacte.html
@@ -33,7 +33,7 @@
     <div class="contenedor">
 
         <div class="contacto">
-            <img class="" src="https://media.licdn.com/dms/image/C4D16AQGD0GJY0mX2Tw/profile-displaybackgroundimage-shrink_350_1400/0/1568813175797?e=1678320000&v=beta&t=0o3gEDLY-W9JaoLgIEzxHB_rifQFf9iBziimDiEErYY" alt="began"/>
+            <img class="" src="Recursos/img/fondo-contacto.jpeg" alt="began"/>
             <div class="contacto2">  
             <h1>Contacto</h1></div>
         </div>
