--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="contenedor">
 
             <div class="contacto">
-                <img class="" src="https://media.licdn.com/dms/image/C4D16AQGD0GJY0mX2Tw/profile-displaybackgroundimage-shrink_350_1400/0/1568813175797?e=1678320000&v=beta&t=0o3gEDLY-W9JaoLgIEzxHB_rifQFf9iBziimDiEErYY" alt="began"/>
+                <img class="" src="Recursos/img/fondo-contacto.jpeg" alt="began"/>
                 <div class="contacto2">  <h1>Porfolio</h1></div>
             </div>
 
@@ -73,18 +73,16 @@
     <h2 id="titol">Experiencia</h2>
 
     <article class="experiencia1">
-        <img src=”recursos/img/imag2.jpg”  alt="html">
-        <p>HTML</p>
+        <img src=”Recursos/img/grafic_html5.png”  alt="html">
     </article>
 
     <article class="experiencia2">
-        <img src=”recursos/img/imag2.jpg”  alt="css">
-        <p>CSS</p>
+        <img src=”Recursos/img/grafic_css3.png”  alt="css">
+
     </article>
 
     <article class="experiencia">
-        <img src=”recursos/img/imag2.jpg”  alt="js">
-        <p>JS</p>
+        <img src=”Recursos/img/grafic_js.png”  alt="js">
     </article>
 
 </section>
